--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> <a href="index2.html"> Berlin </a> </h1>
+    <h2> Berlin é a capital da Alemanha conhecvida por ser muito multicultural além de sua hístoria </a> </h2>
 </body>
 <img id="Alemanha" src="download.jpeg">
 </html>
